Fix row-gap not supported on old browsers

--- a/src/components/css/App.css
+++ b/src/components/css/App.css
@@ -381,7 +381,6 @@ html.modal-open, html.modal-open body
     display: flex;
     align-items: stretch;
     justify-content: space-around;
-    row-gap: 4em;
     flex-wrap: wrap;
 }
 
@@ -397,6 +396,7 @@ html.modal-open, html.modal-open body
     flex-direction: column;
     background-color: #FFF;
     cursor: pointer;
+    margin-bottom: 4em;
     transition: .3s;
     box-shadow: 0 0 10px 5px rgba( 0,0,0,0.3 );
 }
